--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.6.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "antd": "^4.20.4",
+    "bootstrap": "^5.1.3",
+    "graphql": "^16.4.0",
+    "graphql-ws": "^5.8.1",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.3.0",
     "react-dom": "^18.0.0",
+    "react-dropzone": "^12.1.0",
+    "react-quill": "^1.3.5",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.4.13",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
