change database cause reach limit

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_GRAPHQL_ENDPOINT=https://picked-doe-95.hasura.app/v1/graphql
-REACT_APP_GRAPHQL_WS_ENDPOINT=wss://picked-doe-95.hasura.app/v1/graphql
+REACT_APP_GRAPHQL_ENDPOINT=https://rare-crappie-41.hasura.app/v1/graphql
+REACT_APP_GRAPHQL_WS_ENDPOINT=wss://rare-crappie-41.hasura.app/v1/graphql
